# FNBots-Go

./: .env  .env.example  .gitignore  BUGFIX_THREAD_DEATH.md  Dockerfile  HOTFIX_HEARTBEAT.md  LICENSE  README.md  deploy.sh  docker-compose.from-image.yml  docker-compose.yml  healthcheck.sh  publish-amd64.sh  publish-arm64.sh  publish-docker.sh  pyproject.toml  requirements.txt  settings.yml
.cursor/: MCP_README.md  mcp.json
.github/workflows/: docker-manifest.yml  docker-publish.yml  merge-manifest.yml
config/: config.json
docs/: notification-channels.md
docs/channels/: bark.md  dingtalk.md  feishu.md  gotify.md  wechat.md
scripts/: seed_push_history.py
src/: __init__.py  config.py  main.py
src/monitor/: __init__.py  db_log_poller.py  event_processor.py  funan_log_monitor.py  journal_watcher.py  models.py
src/notifier/: __init__.py  connection_pool.py  multi_platform_notifier.py  unified_notifier.py  wechat_notifier.py
src/utils/: health_check.py  log_storage.py  logger.py  push_history.py  push_stats.py
src/web/: __init__.py  ui_app.py
tools/: log_manager.py
